# snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  go.mod  main.go  vcpkg-configuration.json
src/: game.cpp  game.h  game_window.cpp  game_window.h  main.cpp
